--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^8.0.0",
     "react-scripts": "5.0.1",
     "sass": "^1.50.1",
+    "swiper": "^8.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
